# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
diff_calc/scripts/: gendiff.py
gendiff/: cli.py  diff.py  engine.py  file_loader.py  parser.py
gendiff/form/: extended.py  json_format.py  plain.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_engine.py  tests.py
tests/fixtures/: test_extended_nested_result.txt  test_json_flat_result.json  test_json_nested_result.json  test_nested_after.yaml  test_nested_result.txt  test_new_config.json  test_old_config.json  test_old_config.yaml  test_plain_nested_result.txt
