[tool.poetry]
name = "Artlyne_diff_calc"
version = "0.1.0"
description = "Difference Calculator"
authors = ["Artlyne <Artlynee@gmail.com>"]
packages = [
  { include = "diff_calc" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = "diff_calc.scripts.gendiff:main"
